# mtig_driver

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  Doxyfile.config  README  package.xml  package.xml~
include/: conio.h  global.h  messageMaker.h  messageMaker.h~  mtiG.h  mtiG.h~  myxda.h  sensorData.h  sensorData.h~  serialkey.h
launch/: all_max.launch  all_one.launch  all_zero.launch  gps_only.launch  mtig_driver.launch  receive_xsens.launch
receive_xsens/: CMakeLists.txt  README
receive_xsens/doc/: mainpage.c
receive_xsens/include/: console.h  messageMaker.h~  sensorData.h  serialkey.h
receive_xsens/launch/: all_max.launch  all_zero.launch  gps_only.launch
receive_xsens/msg/: GpsInfo.msg
receive_xsens/src/: conio.c  console.cpp  mtiG.cpp  myxda.cpp  sensorData.cpp
src/: main.cpp  messageMaker.cpp  messageMaker.cpp~  mtiG.cpp  mtiG.cpp~  myxda.cpp  sensorData.cpp  serialkey.cpp
