<package>
  <name>mtig_driver</name>
  <description>

     ROS driver for Xsens MTI-G-700 series motion trackers
	  - modified to publish GPS messages

  </description>
  <author>Lucas Casanova Nogueira</author>
  <version>0.9.0</version>
  <maintainer email="lukscasanova@gmail.com"> Lucas Casanova Nogueira</maintainer>
  <license>BSD</license>
  <url>http://www.ros.org/wiki/mtig_drivers
</url>


  <buildtool_depend>catkin</buildtool_depend>  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>


